ASSERTION FAILED: ASSERT(!isPercentageIntrinsicSize) in RenderReplaced::computeIntrinsicRatioInformationForRenderBox https://bugs.webkit.org/show_bug.cgi?id=88197

Patch by Joe Thomas <joethomas@motorola.com> on 2012-06-05
Reviewed by Daniel Bates.

RenderSVGRoot extends RenderReplaced and it overrides the computeIntrinsicRatioInformation()
method of RenderReplaced. RenderSVGRoot::computeIntrinsicRatioInformation
sets isPercentageIntrinsicSize to true while it handles width and height of percentage types.
So this assertion should be fired only if intrinsicRatio is non-zero.

Source/WebCore:

Test: svg/in-html/svg-assert-failure-percentage.html

* rendering/RenderReplaced.cpp:
(WebCore::RenderReplaced::computeIntrinsicRatioInformationForRenderBox):

LayoutTests:

* svg/in-html/svg-assert-failure-percentage-expected.txt: Added.
* svg/in-html/svg-assert-failure-percentage.html: Added.

Canonical link: https://commits.webkit.org/106227@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119565 268f45cc-cd09-0410-ab3c-d52691b4dbfc